--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
                 <button class="conteudo-principal-escrito-botao">Me adicione</button>
             </div>
-            <img class="conteudo" src="assets/ballebot.svg" alt="Imagem da Balle Bot">
+            <img class="conteudo-principal-imagem" src="assets/ballebot.svg" alt="Imagem da Balle Bot">
         </section>
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo">O que ela faz por você?</h3>
